--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -29,4 +31,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  margin: 0px auto 0px auto;
+  width: 100%;
+  height: 100%;
+  background-image: url("./images/sprinkles.png");
 }
