--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,19 +1,29 @@
-.lessmess-footer {
+.copyright {
+  width: 100%;
+  height: 60px;
+  font-size: 16px;
+  padding: 10px;
+  text-align: center;
+  color:  #216999;
+  text-shadow:
+  -.3px -.3px 0 #13415f,
+   .3px -.3px 0 #13415f,
+  -.3px .3px 0 #13415f,
+   .3px .3px 0 #13415f;
+}
+
+footer {
   width: 100%;
   height: 60px;
   font-size: 12px;
-  margin-top: 20px;
   padding: 5px 0 10px 0;
   position: fixed;
   bottom: 0;
-  right:0;
   left:0;
-  color: #3d4cef;
-  text-shadow: .5px .5px #1325ee;
+  background-color:#faf3d7; 
   text-align: center;
-  background-color: #9cfcc9;
-  border-top: 4px solid #eafdd3;
-  opacity: 0.7;
+  border-top: 1px solid #31a4f0;
+  z-index: 1
 }
 
 a:link,
