--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,20 +1,108 @@
+* {
+  box-sizing: border-box;
+}
+
+#words,
+#games,
+#feedback,
+#about,
+#login {
+  text-decoration: none;
+  color:  #216999;
+  margin: 10px;
+  text-align: center;
+  text-shadow: 1px 1px #053453,
+}
+
+#home-h1 {
+  margin: 0px;
+  padding: 0 10px 0 10px;
+  width: 200px;
+  height: 60px;
+  font-size: 22px;
+  line-height: 2.5;
+  letter-spacing: 2px;
+  background-color: #216999;
+  border-radius: 0px 0px 5px 5px;
+  text-align: center;
+  float: left;
+}
+
+#home {
+  color: #faf3d7;
+}
+
+a:hover {
+    font-weight: bold;;
+}
+
+.navigation {
+  background-color: #faf3d7;
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid #216999;
+  text-shadow: .5px .5px #13415f; 
+  font-size: 16px;
+  text-align: center;
+  padding-top: 15px;
+}
+
 a {
   margin: 0 20px 0 20px;
+  
 }
 
-.navbar {
-  background-color: #9cfcc9;
-  opacity: 0.7;
-  width: 100%;
-  height: 50px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin-bottom: 20px;
-  border-bottom: 4px solid #eafdd3;
-  text-shadow: .5px .5px #1325ee;
+a:link {
+  text-decoration: none;
+  margin: 10px;
+  text-align: center;
+  text-shadow: 1px 1px #053453,
 }
 
-.navbar a {
-  color: #000000;
+a:hover {
+    font-weight: bold;;
+}
+
+a:visited {
+    background-color: orange;
+}
+
+@media screen and (max-width:980px) {
+  #home-h1 {
+    width:200px;
+  }
+
+  .navigation {
+    width: 100%;
+  } 
+
+  a:link {
+    margin:5px;
+  }
+}
+
+@media screen and (max-width:768px) {
+  #home-h1 {
+    width:100%;
+    line-height: 1;
+    height: 35px;
+    padding-top: 5px;
+  }
+
+  .navigation {
+    width: 100%;
+    height: 60px;
+    padding-top: 0px;
+  }
+}
+
+@media screen and (max-width:640px) {
+  #home-h1 {
+    font-size: 20px;
+    height: 30px;
+  }
+
+  .navigation {
+    font-size: 14px;
+  }
 }
