connected to db, added cards to games, shuffled, logic still missing

--- a/client/src/components/wordCard/wordCard.css
+++ b/client/src/components/wordCard/wordCard.css
@@ -1,14 +1,14 @@
-#container {
-  margin: 40px auto 80px auto;
-}
-
-.card-header {
-  background-color: #047aff;
-  color:#f6faf1;
-  font-size: 26px;
+.word,
+.article {
+  height: 120px;
+  width: 200px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: #faf8ec;
   text-align: center;
-}
-
-.card-body {
-  background-color: #f6faf1;
+  float: left;
+  color: #216999;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-size: 16px;
 }
