added startOver method in Games

--- a/client/src/pages/Games/Games.css
+++ b/client/src/pages/Games/Games.css
@@ -3,7 +3,7 @@
   color:  #216999;
 }
 
-#start {
+#startOver {
   margin-left: 150px;
   -webkit-animation-duration: 0.4s;
   -webkit-animation-delay: 2s;
